# acws

./: .gitignore  ATD_NOTES.md  AUTOMATED-DEPLOYMENT-SUMMARY.md  CI_CD_PIPELINE.md  CI_CD_README.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FUTURE-WORKSHOPS-GUIDE.md  GITHUB-ACTIONS-FIX.md  MIKE-PROTECTION-README.md  MIKE-PROTECTION-SUMMARY.md  PIPELINE_DEPLOYMENT_SUMMARY.md  PIPELINE_QUICK_REFERENCE.md  README.md  SAFE_CONTENT_IMPORT_GUIDE.md  SAFE_DEPLOYMENT_SUMMARY.md  SSH-CONNECTION-SUMMARY.md  add-workshop-version.sh  config_tools.md  convert_mp4_to_gif.sh  enhance_gifs.sh  final_github_deployment.sh  generate_clickable_lab_assignment.py  lab_mkdocs.yml  manual-deploy.sh  mike-protection-plan.md  mike-protection.conf  mike-safe-operations.sh  mkdocs-version-control-protected.sh  mkdocs-version-control.sh  mkdocs.yml  mobile-testing-guide.md  pyproject.toml  quick-deploy.sh  refresh-github-actions.sh  requirements.txt  safe-content-import.sh  setup-github-secrets.md  setup-pipeline.sh  (+8 more)
.devcontainer/: devcontainer.json  requirements.txt
.github/: pull_request_template.md
.github/workflows/: automated-update.yml  delete_guide.yml  deploy-docs.yml  deploy-docs.yml.disabled  deploy-nginx.yml  deploy.yml  gcp_sync_dev.yml  gcp_sync_prod.yml  maintenance.yml  new_ver.yml  pr_testing.yml  release.yml  rerelease.yml  test-connection.yml  test-docs.yml
2025.4.ATL/: 404.html  index.html  sitemap.xml
2025.4.ATL/javascripts/: enhanced-gifs.js
2025.4.ATL/print_page/: index.html
2025.4.ATL/stylesheets/: enhanced-components.css
2026.1/: 404.html  index.html  sitemap.xml
2026.1/print_page/: index.html
2026.1/references/: lab_assignment.md.backup_20251027_143121
2026.1/search/: search_index.json
automation/: README.md  a01_lab_agent.py  launch_agent.sh  requirements.txt
avd/: Makefile  README.md  ansible.cfg
avd/playbooks/: pb.agni-onboard.yml  pb.build.yml  pb.cue-onboard.yml  pb.deploy-servers.yml  pb.deploy.yml  pb.gen-act-topo.yml  pb.validate.yml
data/: atlanta_lab_assignment.csv  lab_assignment.csv  lab_assignment_backup_20251020_155759.csv  orlando_lab_assignment.csv
docs/: index.md  lab_access.md
docs/a_wired/: a01_lab.md  a02_atd.md  a02_lab.md  a03_lab.md  a03_lab_backup.md  a04_lab.md
docs/b_wireless/: b00_lab.md  b01_lab.md  b02_lab.md  b03_lab.md  b04_lab.md
docs/c_security/: c01_lab.md  c02_lab.md  c03_lab.md
docs/d_sdwan/: d01_lab.md  d02_lab.md  d03_lab.md
docs/e_vantage/: e01_lab.md  e02_lab.md  e03_lab.md
docs/lab/: access.md
docs/marketing/: index.md
docs/references/: agenda.md  agni_tacacs.md  arista_mss_guide.md  change_control_workspace.md  config_tools.md  l2tunnel.md  lab_assignment.md  orl_lab_assignment.md  radsec.md  streaming.md  velocloud_eveng_guide.md  wifi_password.md  wips.md  wireless_onboard.md
docs/security/: c01_lab.md  c02_lab.md  c03_lab.md
docs/setup/: agni.md  cvaas_avd.md  cvaas_configlets.md  cvcue.md  index.md
docs/snippets/: login_agni.md  login_cv.md  login_cv_backup.md  login_cvcue.md  topology copy.md  topology.md
docs/stylesheets/: enhanced-components.css  extra.css
docs/wired/: a01_lab.md  a02_lab.md  a03_lab.md  (+1 more)
includes/: abbreviations.md
internal_docs/: index.md
latest/: 404.html  index.html
scripts/: branch-aliases.sh  deploy.sh  protect-orlando.sh  quick-deploy.sh  switch-branch.sh  test-deployment.sh  test-ssh.sh
(+301 files in other folders)
